ipc/ipdl/test/ipdl/error/trans_WrongName.ipdl
protocol trans_WrongName {

child:
    Msg();
    __delete__();

state S1:
    call Msg goto S1;
    send __delete__();
};
